# fimdosemestrebot

./: .gitignore  README.md  example.env  pyproject.toml  requirements.txt
bot/: bot.py  config.py  core.py  strings.py
fimdosemestrebot/: __main__.py  config.py  core.py  strings.py
